--- a/LIAN.ini
+++ b/LIAN.ini
@@ -19,7 +19,7 @@ ruleset=➡️ 国内,[]FINAL
 custom_proxy_group=👽 AI1`select`[]DIRECT`[]所有-自动`[]港台日新美韩-自动`[]港台日新-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=👽 AI2`select`[]DIRECT`[]所有-自动`[]港台日新美韩-自动`[]港台日新-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有-自动`[]港台日新美韩-自动`[]港台日新-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]所有-自动`[]港台日新美韩-自动`[]港台日新-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=👯‍♂️ TikTok`select`[]DIRECT`[]美国-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🙋 Telegram`select`[]DIRECT`[]所有-自动`[]港台日新美韩-自动`[]港台日新-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📀 流媒体`select`[]DIRECT`[]所有-自动`[]港台日新美韩-自动`[]港台日新-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-自动`[]港台日新美韩-自动`[]港台日新-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
