--- a/OpenClash-zhao.ini
+++ b/OpenClash-zhao.ini
@@ -8,7 +8,7 @@ ruleset=➡️ China,[]FINAL
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=👽 AI`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
-custom_proxy_group=📘 GitHub`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
+custom_proxy_group=📘 GitHub`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]新加坡-自动`[]台湾-自动`[]香港-自动`[]REJECT
 custom_proxy_group=📀 StreamingSocial`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
 custom_proxy_group=🌍 Foreign`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
 custom_proxy_group=🌍 iLikeit`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
