--- a/OpenClash-zhao.ini
+++ b/OpenClash-zhao.ini
@@ -4,7 +4,7 @@ ruleset=📘 GitHub,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/m
 ruleset=📀 StreamingSocial,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_StreamingSocial.list
 ruleset=🌍 Foreign,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Clash_Global_Foreign.list
 ruleset=🌍 iLikeit,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_iLikeit.list
-ruleset=➡️ Others,[]FINAL
+ruleset=➡️ China,[]FINAL
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=👽 AI`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
@@ -12,7 +12,7 @@ custom_proxy_group=📘 GitHub`select`[]DIRECT`[]港台日新-自动`[]港台日
 custom_proxy_group=📀 StreamingSocial`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
 custom_proxy_group=🌍 Foreign`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
 custom_proxy_group=🌍 iLikeit`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
-custom_proxy_group=🌍 Others`select`[]港台日新-自动
+custom_proxy_group=🌍 China`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
 
 ;3、节点组
 custom_proxy_group=港台日新-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong|广台|广日|广新|广韩|广美|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`60,150
