--- a/OpenClash-zhao.ini
+++ b/OpenClash-zhao.ini
@@ -4,15 +4,15 @@ ruleset=📘 GitHub,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/m
 ruleset=📀 StreamingSocial,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_StreamingSocial.list
 ruleset=🌍 iLikeit,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_iLikeit.list
 ruleset=🌍 Foreign,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Clash_Global_Foreign.list
-ruleset=➡️ China,[]FINAL
+ruleset=🌍 漏网之鱼,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=👽 AI`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
-custom_proxy_group=📘 GitHub`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]新加坡-自动`[]台湾-自动`[]香港-自动`[]REJECT
-custom_proxy_group=📀 StreamingSocial`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
-custom_proxy_group=🌍 iLikeit`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
-custom_proxy_group=🌍 Foreign`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
-custom_proxy_group=🌍 China`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]REJECT
+custom_proxy_group=👽 AI`select`[]DIRECT`[]港台日新-自动`[]REJECT
+custom_proxy_group=📘 GitHub`select`[]DIRECT`[]美国-自动`[]新加坡-自动`[]台湾-自动`[]香港-自动`[]REJECT
+custom_proxy_group=📀 StreamingSocial`select`[]DIRECT`[]港台日新-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🌍 iLikeit`select`[]DIRECT`[]港台日新-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🌍 Foreign`select`[]DIRECT`[]港台日新-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🌍 漏网之鱼`select`[]DIRECT`[]港台日新-自动`[]其他-自动`[]REJECT
 
 ;3、节点组
 custom_proxy_group=港台日新-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong|广台|广日|广新|广韩|广美|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`60,150
@@ -24,7 +24,7 @@ custom_proxy_group=日本-自动`url-test`(广日|日本|JP|川日|东京|大阪
 custom_proxy_group=新加坡-自动`url-test`(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=美国-自动`url-test`(广美|美|US|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|硅谷|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加|🇺🇸|United States)`http://www.gstatic.com/generate_204`60,150
 custom_proxy_group=韩国-自动`url-test`(韩国|KR|首尔|春川|🇰🇷|Korea)`http://www.gstatic.com/generate_204`60,150
-custom_proxy_group=其他-自动`url-test`(波|柬|尼|也|克|比|尔|立|冰|秘|耳|利|埃|希|孟|芬|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|Australia|Konghwaguk)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=其他-自动`url-test`(波|柬|尼|也|克|土|菲|悉|比|尔|立|冰|秘|耳|利|埃|希|孟|芬|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|Australia|Konghwaguk)`http://www.gstatic.com/generate_204`60,150
 
 ;4、启用规则集
 enable_rule_generator=true
