--- a/OpenClash-zhao.ini
+++ b/OpenClash-zhao.ini
@@ -5,6 +5,7 @@ ruleset=📀 PikPak,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/m
 ruleset=📀 YouTube,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_YouTube.list
 ruleset=📀 Eporner,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Eporner.list
 ruleset=📀 TMDB,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_TMDB.list
+ruleset=📀 TikTok,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_TikTok.list
 ruleset=📀 StreamingSocial,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_StreamingSocial.list
 ruleset=🌍 iLikeit,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_iLikeit.list
 ruleset=🌍 Foreign,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Clash_Global_Foreign.list
@@ -17,6 +18,7 @@ custom_proxy_group=📀 PikPak`select`[]DIRECT`[]港台日新-自动`[]港台日
 custom_proxy_group=📀 YouTube`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📀 Eporner`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📀 TMDB`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📀 TikTok`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📀 StreamingSocial`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🌍 iLikeit`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
 custom_proxy_group=🌍 Foreign`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
