--- a/OpenClash-zhao.ini
+++ b/OpenClash-zhao.ini
@@ -12,17 +12,17 @@ ruleset=🌍 Foreign,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/
 ruleset=➡️ 漏网之鱼,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=👽 AI`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📘 GitHub`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📀 PikPak`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📀 YouTube`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📀 Eporner`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📀 TMDB`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📀 TikTok`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=📀 StreamingSocial`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🌍 iLikeit`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=🌍 Foreign`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
-custom_proxy_group=➡️ 漏网之鱼`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=👽 AI`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📘 GitHub`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📀 PikPak`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📀 YouTube`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📀 Eporner`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📀 TMDB`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📀 TikTok`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📀 StreamingSocial`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🌍 iLikeit`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=🌍 Foreign`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
+custom_proxy_group=➡️ 漏网之鱼`select`[]DIRECT`[]港台日新-自动`[]港台日新美韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]美国-自动`[]韩国-自动`[]其他-自动`[]REJECT
 
 ;3、节点组
 custom_proxy_group=港台日新-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong|广台|广日|广新|广韩|广美|台湾|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|新加坡|SG|坡|狮城|🇸🇬|Singapore)`http://www.gstatic.com/generate_204`60,150
