--- a/OpenClash-zhao.ini
+++ b/OpenClash-zhao.ini
@@ -1,10 +1,10 @@
 ;1、域名组
-ruleset=👽 AI,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_AI.list
-ruleset=📘 GitHub,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_GitHub.list
-ruleset=📀 PikPak,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_PikPak.list
+ruleset=👽 AI,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_AI.list
+ruleset=📘 GitHub,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_GitHub.list
+ruleset=📀 PikPak,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_PikPak.list
 ruleset=🎥 YouTube,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=🎥 Eporner,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Eporner.list
-ruleset=📀 TMDB,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_TMDB.list
+ruleset=🎥 Eporner,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Eporner.list
+ruleset=📀 TMDB,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_TMDB.list
 ruleset=👩‍👧‍👦 TikTok,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=➡️ 人间地狱,https://github.geekery.cn/raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Direct.list
 ruleset=➡️ 人间地狱,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
