--- a/OpenClash-zhao.ini
+++ b/OpenClash-zhao.ini
@@ -1,17 +1,21 @@
 ;1、域名组
-ruleset=👽 AI,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_AI.list
-ruleset=📘 GitHub,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_GitHub.list
-ruleset=📀 PikPak,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_PikPak.list
-ruleset=📀 YouTube,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=📀 Eporner,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Eporner.list
-ruleset=📀 TMDB,https://github.geekery.cn/raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_TMDB.list
-ruleset=📀 TikTok,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
-ruleset=➡️ 人间地狱,https://github.geekery.cn/raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Direct.list
-ruleset=➡️ 人间地狱,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
+ruleset=📀 Japan,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Japan.list
+ruleset=📀 NoJapan,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_NoJapan.list
+ruleset=👽 AI,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_AI.list
+ruleset=📘 GitHub,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_GitHub.list
+ruleset=📀 PikPak,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_PikPak.list
+ruleset=📀 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+ruleset=📀 Eporner,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_Eporner.list
+ruleset=📀 TMDB,https://raw.githubusercontent.com/zhao77ke/file/refs/heads/main/Rule_TMDB.list
+ruleset=📀 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
+ruleset=➡️ 人间地狱,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Direct.list
+ruleset=➡️ 人间地狱,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
 ruleset=➡️ 人间地狱,[]GEOIP,CN
 ruleset=🌍 自由世界,[]FINAL
 
 ;2、策略组（域名组-节点组）
+custom_proxy_group=📀 Japan`select`[]DIRECT`[]港台日-自动`[]港台日韩美英-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]英国-自动`[]新加坡-自动`[]其他-自动`[]REJECT
+custom_proxy_group=📀 NoJapan`select`[]DIRECT`[]港台日-自动`[]港台日韩美英-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]英国-自动`[]新加坡-自动`[]其他-自动`[]REJECT
 custom_proxy_group=👽 AI`select`[]DIRECT`[]港台日-自动`[]港台日韩美英-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]英国-自动`[]新加坡-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📘 GitHub`select`[]DIRECT`[]港台日-自动`[]港台日韩美英-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]英国-自动`[]新加坡-自动`[]其他-自动`[]REJECT
 custom_proxy_group=📀 PikPak`select`[]DIRECT`[]港台日-自动`[]港台日韩美英-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]韩国-自动`[]美国-自动`[]英国-自动`[]新加坡-自动`[]其他-自动`[]REJECT
